<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif-monospace"
            android:text="@string/tvSettings"
            android:textSize="34sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/holo_orange_dark" />

        <EditText
            android:id="@+id/edAdresse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="serif-monospace"
            android:hint="@string/textUrl"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edToken"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="serif-monospace"
            android:hint="@string/textToken"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/alarmDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif-monospace"
            android:paddingStart="4dp"
            android:paddingTop="4dp"
            android:paddingEnd="0dp"
            android:switchTextAppearance="@style/TextAppearance.AppCompat.Body1"
            android:text="@string/alarmRepeat"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="182dp">

        <Button
            android:id="@+id/btnSave"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:backgroundTint="@color/teal_700"
            android:text="@string/saveSettings" />

        <Button
            android:id="@+id/btnDelete"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:backgroundTint="@color/teal_700"
            android:text="@string/deleteSettings" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>