<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif-monospace"
            android:text="@string/tvInfo"
            android:textAllCaps="true"
            android:textSize="34sp" />

        <View
            android:id="@+id/vSplit1"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/holo_orange_dark"/>

        <LinearLayout
            android:id="@+id/grpCpuTemp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="4dp">

            <TextView
                android:id="@+id/tvCpuTempText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="serif-monospace"
                android:text="@string/tvCpuTempText"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvCpuTempView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="serif-monospace"
                android:text="@string/loadingText"
                android:textAlignment="viewEnd"
                android:textColor="@color/purple_500"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/grpSdFree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvSdFreeText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="serif-monospace"
                android:text="@string/tvSdFreeText"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvSdFreeView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="serif-monospace"
                android:text="@string/loadingText"
                android:textAlignment="viewEnd"
                android:textColor="@color/purple_500"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/grpRamFree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvRamFreeText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="serif-monospace"
                android:text="@string/tvRamFreeText"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvRamFreeView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="serif-monospace"
                android:text="@string/loadingText"
                android:textAlignment="viewEnd"
                android:textColor="@color/purple_500"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/grpRunningTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvRunTimeTExt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="serif-monospace"
                android:text="@string/tvRunTimeText"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvRunTimeView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="serif-monospace"
                android:text="@string/loadingText"
                android:textAlignment="viewEnd"
                android:textColor="@color/purple_500"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/grpApache"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvApacheText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="serif-monospace"
                android:text="@string/tvApache"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvApacheView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="serif-monospace"
                android:text="@string/loadingText"
                android:textAlignment="viewEnd"
                android:textColor="@color/green"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/grpSsh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvShhText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="serif-monospace"
                android:text="@string/tvSshText"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvSshView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="serif-monospace"
                android:text="@string/loadingText"
                android:textAlignment="viewEnd"
                android:textColor="@color/green"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/grpSql"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvSqlText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="serif-monospace"
                android:text="@string/tvSqlText"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvSqlView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="serif-monospace"
                android:text="@string/loadingText"
                android:textAlignment="viewEnd"
                android:textColor="@color/green"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvNextText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif-monospace"
            android:paddingTop="8dp"
            android:text="@string/tvNextText"
            android:textAllCaps="true"
            android:textSize="34sp" />

        <View
            android:id="@+id/vSplit2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/holo_orange_dark"
            android:paddingTop="4dp"/>

        <LinearLayout
            android:id="@+id/grpNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvNextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="serif-monospace"
                android:text="@string/loadingText"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvFutureText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif-monospace"
            android:paddingTop="8dp"
            android:text="@string/tvInFutureTExt"
            android:textAllCaps="true"
            android:textSize="34sp" />

        <View
            android:id="@+id/vSplit3"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/holo_orange_dark"/>

        <LinearLayout
            android:id="@+id/grpAlsNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvFutureView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="serif-monospace"
                android:text="@string/loadingText"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/grpServerNotice"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="bottom"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnSettings"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/teal_700"
                    android:text="@string/btnSettings"
                    tools:ignore="NestedWeights" />

                <Button
                    android:id="@+id/btnNotice"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/teal_700"
                    android:text="@string/btnNotice" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnLed"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/teal_700"
                    android:text="@string/btnLed" />

                <Button
                    android:id="@+id/btnServer"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/teal_700"
                    android:text="@string/btnServer" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>