<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTask">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <CalendarView
            android:id="@+id/calView"
            style="@android:style/Widget.DeviceDefault.CalendarView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/edTextNotice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="serif-monospace"
            android:hint="@string/noticeText"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/cbReplay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif-monospace"
            android:paddingStart="4dp"
            android:paddingTop="4dp"
            android:paddingEnd="0dp"
            android:switchTextAppearance="@style/TextAppearance.AppCompat.Body1"
            android:text="@string/replayNotice"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnSave"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/green"
            android:text="@string/btnSaveNotice" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>